ansible/playbooks/cluster/efk-logging-stack/roles/elasticsearch/templates/elasticsearch-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: elasticsearch
  namespace: efk-logging
spec:
  podSelector:
    matchLabels:
      app: elasticsearch
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: kibana
        - podSelector:
            matchLabels:
              app: fluentd
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: diagnostico
      ports:
        - protocol: TCP
          port: 9200
